# Medical_diagnostics_company_website

./: .coveragerc  .dockerignore  .env.example  .env.test  .flake8  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  bandit_report.html  conftest.py  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.cfg
src/: add_services.py  bandit_report.html  conftest.py  pyproject.toml  pytest.ini  run_tests.py
src/apps/: __init__.py
src/apps/appointments/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/apps/common/: admin.py  admin_views.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
src/apps/services/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
src/apps/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/core/: admin.py  production_settings.py  settings.py  test_settings.py  urls.py
src/scripts/: backup.sh  deploy.sh  fix_appointments_admin.py  fix_appointments_final.py  fix_pep8.py  health_check.sh
src/static/css/: custom.css
src/static/js/: main.js
src/staticfiles/css/: custom.css
src/templates/: base.html
src/templates/admin/: base_site.html  custom_dashboard.html  custom_index.html
src/templates/appointments/: create.html  detail.html  list.html
src/templates/common/: 400.html  403.html  404.html  500.html  about.html  contacts.html  index.html
src/templates/includes/: footer.html  header.html
src/templates/services/: detail.html  list.html
(+56 files in other folders)
